[gd_scene load_steps=5 format=2]

[ext_resource path="res://Pic/Road/crosswalk.png" type="Texture" id=1]
[ext_resource path="res://Pic/Road/traffic_light.png" type="Texture" id=2]
[ext_resource path="res://Scripts/traffic_light.gd" type="Script" id=3]
[ext_resource path="res://Pic/Effects/light.png" type="Texture" id=4]

[node name="crosswalk" type="Sprite"]
position = Vector2( 155, 129 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )

[node name="traffic_light" type="Sprite" parent="."]
position = Vector2( 335.871, 25.5577 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
script = ExtResource( 3 )

[node name="TrafficBody" type="RigidBody2D" parent="traffic_light"]
visible = false
mode = 3

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="traffic_light/TrafficBody"]
position = Vector2( -0.77951, 14.0312 )
polygon = PoolVector2Array( -411.156, 113.19, 76.8439, 113.19, 76.8439, -56.81, -411.156, -56.81 )

[node name="GreenLight" type="Light2D" parent="traffic_light"]
position = Vector2( 38.0643, 9.22116 )
scale = Vector2( 0.362558, 0.362558 )
enabled = false
texture = ExtResource( 4 )
texture_scale = 0.3
color = Color( 0.00784314, 1, 0, 1 )
energy = 2.5

[node name="RedLight" type="Light2D" parent="traffic_light"]
position = Vector2( -27.9356, 9.22116 )
scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 4 )
texture_scale = 0.3
color = Color( 1, 0, 0, 1 )
energy = 2.46
